@startuml
package "ui-support" {
    interface ResourceModule
    class DefaultResourceModule <<component>>

    interface ResourceDecorator
    abstract class AbstractResourceDecorator
    abstract class AbstractLinkResourceDecorator

    interface ResourceDecorationContributorService
    class ResourceDecorationContributorServiceImpl <<service>>

    interface ResourceDecorationContributor

    DefaultResourceModule ..|> ResourceModule
    DefaultResourceModule o--> "*" ResourceDecorator : decorators

    AbstractResourceDecorator ..|> ResourceDecorator
    AbstractLinkResourceDecorator --|> AbstractResourceDecorator

    ResourceDecorationContributorServiceImpl ..|> ResourceDecorationContributorService
    ResourceDecorationContributorServiceImpl o--> "*" ResourceDecorationContributor: contributors

}

package "ui-graphql" {
    class AbstractGQLProjectEntity
    interface GQLProjectEntityFieldContributor

    AbstractGQLProjectEntity --> "*" GQLProjectEntityFieldContributor: contributors
}

package "ui" {
    class BuildResourceDecorator
    class BuildController <<controller>>
    class GQLProjectEntityLinksFieldContributor

    BuildResourceDecorator --> BuildController

    BuildResourceDecorator --|> AbstractLinkResourceDecorator
    BuildResourceDecorator o--> "1" ResourceDecorationContributorService

    GQLProjectEntityLinksFieldContributor ..|> GQLProjectEntityFieldContributor
    GQLProjectEntityLinksFieldContributor --> "*" ResourceDecorator: decorators

}

package "extension-git" {
    class GitBuildResourceDecorationContributor

    GitBuildResourceDecorationContributor ..|> ResourceDecorationContributor
}

@enduml
